src/parser/parser.leg
%{
#ifndef PARSER_C
#define PARSER_C

#ifndef getchar()
	#define getchar() getchar()
#endif

#define YYSTYPE oop

YYSTYPE result;

int newline = 1;

%}


start	= bln d:define 	{ result = d }

define  = t:STATE i:id s:state                { $$ = newSetVar(t,i,s,newline)  }
        | d:bracket 	{ result = d }
        | t:TYPE   i:id p:params s:stmtbl     { $$ = newSetVar(t,i,newFunction(p,s),newline) } 
        | t:TYPE   i:id ASSIGN x:exp		  { $$ = newSetVarG(t, i, x,newline);}
        | RUN      i:id                       { $$ = newRun(newGetVar(i,newline)) }
        | !.                                  { $$ = newEND() }
	    | < (!eol &. .)* >                    { fatal("line %d syntax error: [%s]",newline, yytext); }

state   = LBRACE s:mkState
	  (
	    bln !RBRACE
	    e:event                     { State_append(s, e) }
	  )+
	  bln RBRACE			{ $$ = s }

mkState =                                   { $$ = newState() }

event   = i:id p:params b:block             { $$ = newEvent(i,p,b) }
        | t:TYPE  i:id  ASSIGN  x:exp       { $$ = newSetVar(t, i, x,newline);}
        | t:TYPE  i:id b:bracket ASSIGN x:list NLINE { $$ = newSetArray(t,i,b,x,newline); }

stmt	= PRINT LPAR t:TYPE COMMA x:exp RPAR NLINE      { $$ =  newPrint(x,t); }
	    | IF LPAR c:exp RPAR s:stmtbl
	      bln ELSE t:stmtbl            	        { $$ = newIf(c, s, t) }
	    | IF    LPAR c:exp RPAR s:stmtbl	{ $$ = newIf(c, s, sys_false) }
	    | WHILE LPAR c:exp RPAR s:stmtbl	{ $$ = newWhile(c, s) } 
        | FOR LPAR (i:expr | i:mkNil) SEMI (e:exp | e:mkNil) SEMI (u:expr|u:mkNil) RPAR s:stmtbl { $$ = newFor(i,e,u,s) }
        | CONTINUE NLINE                    { $$ = newContinue() }
        | BREAK    NLINE                    {  $$ = newBreak() }
        | RETURN - e:exp                      { $$ = newReturn(e) }
        | STATE i:id  NLINE                  { $$ = newRun(i) }
	    | x:expr  NLINE                      { $$ = x  }
	    | !.                                { $$ = nil } 
	    | < (!eol &. .)* >                  { fatal("line %d syntax error: [%s]",newline, yytext); }

stmtbl = block 
       | stmt

blocks  = b:mkBlock (bx:block  {Block_append(b, bx)} )+ {$$ = b} #here

block   =  LBRACE b:mkBlock 
	  (
	    bln !RBRACE
	    s:stmt                      { Block_append(b, s) }
	  )+
	  bln RBRACE			{ $$ = b }

mkBlock =                               { $$ = newBlock() }

expr	= assign 

assign  = (t:TYPE | t:mkNil) i:id (ASSIGN x:exp	    { $$ = newSetVar(t, i, x,newline);}
                                  |ADDEQU x:exp     { $$ = newSetVar(t, i, newBinop(ADD,x,newGetVar(i,newline),newline),newline)} 
                                  |SUBEQU x:exp     { $$ = newSetVar(t, i, newBinop(SUB,x,newGetVar(i,newline),newline),newline)} 
                                  |MULEQU x:exp     { $$ = newSetVar(t, i, newBinop(MUL,x,newGetVar(i,newline),newline),newline)} 
                                  |DIVEQU x:exp     { $$ = newSetVar(t, i, newBinop(DIV,x,newGetVar(i,newline),newline),newline)} 
                            )
        | (t:TYPE | t:mkNil) i:id b:bracket ASSIGN (x:list | x:exp) { $$ = newSetArray(t, i,b, x,newline);}
        | func
        
#// brackets  = (s:mkBlock 
#//                 (b:bracket { Block_append(s, b) })*
#//             )+ {printf("bk\n");$$ = s}
bracket   =  LSQP  e:exp RSQP { printf("[]\n");$$ = e }

#// lists = 


#//in progress
list  = LBRACE b:mkBlock bln
	  ( s:exp		{ Block_append(b, s) }
	    (bln COMMA bln s:exp		{ Block_append(b, s) }
	    )*
	  )+
 	  bln RBRACE			{ $$ = b }

	    
exp     = logadd
   


params	= LPAR p:mkNil
	  ( t:TYPE i:id			    { p = newPair(newPair(t,i), p) }
	    ( COMMA t:TYPE i:id		{ p = newPair(newPair(t,i), p) }
	    )*
	  )?
 	  RPAR				{ $$ = p }

mkNil	= 				{ $$ = nil }

logadd  = lhs:logmul ( LOGOR rhs:logmul { lhs = newBinop(OR,lhs,rhs,newline) })* { $$ = lhs }

logmul  = lhs:eqop (LOGAND rhs:eqop { lhs = newBinop(AND,lhs,rhs,newline) })* { $$ = lhs }


eqop    = lhs:ineq ( EQUAL rhs:ineq	{ lhs = newBinop(EQ, lhs, rhs,newline) }
	  	   | NOTEQ rhs:ineq	{ lhs = newBinop(NE, lhs, rhs,newline) }
	  	  )*			{ $$ = lhs }

ineq    = lhs:add ( GREATER rhs:add	{ lhs = newBinop(GT, lhs, rhs,newline) }
	          | GREATEQ rhs:add	{ lhs = newBinop(GE, lhs, rhs,newline) }
	          | LESSEQ  rhs:add	{ lhs = newBinop(LE, lhs, rhs,newline) }
	          | LESS    rhs:add	{ lhs = newBinop(LT, lhs, rhs,newline) }
	  	  )*			{ $$ = lhs }


add	= lhs:mul ( PLURS   rhs:mul	{ lhs = newBinop(ADD, lhs, rhs,newline) }
	  	  | MINUS  rhs:mul	{ lhs = newBinop(SUB, lhs, rhs,newline) }
	  	  )*			{ $$ = lhs }


mul	= lhs:prefix ( STAR  rhs:prefix	{ lhs = newBinop(MUL, lhs, rhs,newline) }
	  	     | SLASH rhs:prefix	{ lhs = newBinop(DIV, lhs, rhs,newline) }
	  	     | PCENT rhs:prefix	{ lhs = newBinop(MOD, lhs, rhs,newline) }
	  	     )*			{ $$ = lhs }

prefix	= MINUS x:value		{ $$ = newUnyop(NEG, x,newline) }
        | INCRE i:id     { $$ = newUnyop(BINC, newGetVar(i,newline),newline) }
        | DECRE i:id     { $$ = newUnyop(BDEC, newGetVar(i,newline),newline) }
        | postfix

postfix = i:id INCRE - { $$ = newUnyop(AINC, newGetVar(i,newline),newline) }
        | i:id DECRE - { $$ = newUnyop(ADEC, newGetVar(i,newline),newline) }
        | func
        | value 


func    = i:id a:args		{ $$ = newCall(a, i, newline); }          

args	= LPAR a:mkNil
	  ( i:exp			{ a = newPair(i, a) }
	    ( COMMA i:exp		{ a = newPair(i, a) }
	    )*
	  )?
 	  RPAR				{ $$ = a }

value	= LPAR lhs:add   RPAR		{ $$ = lhs }
        | QUOTE  character    QUOTE -  
        | DQUOTE string DQUOTE  -
        | float_  
	    | integer         
	    | i:id				{ $$ = newGetVar(i,newline) }


float_	= < ( [0-9]+            expnt
	    | [0-9]+ '.' [0-9]* expnt?
	    | [0-9]* '.' [0-9]+ expnt?
	    ) > -			{ $$ = newFloat(yytext,newline) }

expnt	= 'e' [-+]? [0-9]+

string  = < (!"\"" .)* >  -        { $$ = newString(yytext) }
character = alpha                  { $$ = _newStrChar(yytext)}
integer	= < [0-9]+ > - 		       { $$ = newInteger(yytext,newline) }
id	= < alpha alnum* > -	       { $$ = intern(yytext);  }


alpha	= [a-zA-Z_]
alnum	= [a-zA-Z_0-9] | '_'

-	= space*
space	= [ \t]
	    |  '//' (![\n\r] .)*


bln	= blank*
blank	= [ \t\r]
        | NLINE 
	    | '//' (![\n\r] .)* 

NLINE   = "\n"  { ++newline }


eol	= [\r\n]

TYPE    = "int" -    { $$ = newObject(_Integer)}
        | "long"-    { $$ = newObject(_Long)   }
        | "dou" -    { $$ = newObject(_Double) }
        | "flo" -    { $$ = newObject(_Float)  }
        | "cha" -    { $$ = newObject(_Char)   }
        | "str" -    { $$ = newObject(String)  }
        | "key" -    { $$ = newObject(Key)     }

ASSIGN	= "=" !"="  -
ADDEQU  = "+="      -
SUBEQU  = "-="      -
MULEQU  = "*="      -
DIVEQU  = "/="      -

LOGAND     = "&&"      -

LOGOR      = "||"      -

EQUAL   = "=="	    -
NOTEQ   = "!="      -

LESS    = "<" ![=<] -
LESSEQ  = "<="      -
GREATEQ = ">="      -
GREATER = ">" ![=>] -

PLURS	= "+" 	    -
MINUS	= "-" 	    -

STAR	= "*" 	    -
SLASH	= "/" 	    -
PCENT	= "%" 	    -

INCRE   = "++"      
DECRE   = "--"
LPAR	= "(" 	    -
RPAR	= ")" 	    -
LSQP    = "["       -
RSQP    = "]"       -
COMMA	= ","       -
SEMI    = ";"       -
LBRACE  = "{" 	    - 
RBRACE  = "}" 	    - 
QUOTE   = "\'"      
DQUOTE  = "\""      

#//PLING	= "!" !"="  -

STATE    = "state"    !alnum - { $$ = newObject(State) }
PRINT    = "print"    !alnum -
IF       = "if"       !alnum -
ELSE     = "else"     !alnum -
WHILE    = "while"    !alnum -
FOR      = "for"      !alnum -
RUN      = "run"      !alnum -
CONTINUE = "continue"
BREAK    = "break"
RETURN   = "return"
%%;
// https://programming-place.net/ppp/contents/c/appendix/operation.html
#undef getchar
#endif
